Mon May 22 15:38:25 1995  Stu Grossman  (grossman@cygnus.com)

	* breakpoint.c:  Move defaults of watchpoint related macros into
	target.h.
	* target.h:  Macros from breakpoint.c.  Conditionalize based on
	TARGET_HAS_HARDWARE_WATCHPOINTS.
	* i386v-nat.c procfs.c:  Use TARGET_HAS_HARDWARE_WATCHPOINTS
	instead of TARGET_CAN_USE_HARDWARE_WATCHPOINT to enable watchpoint
	code.
	* config/i386/nm-linux.h, config/mips/nm-irix4.h,
	config/pa/nm-hppab.h, config/sparc/tm-sparclite.h:  #define
	TARGET_HAS_HARDWARE_WATCHPOINTS to enable watchpoint code.

Mon May 22 06:47:30 1995  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* breakpoint.c, target.h: Move defaults of watchpoint related
	macros back to breakpoint.c.  Required to get GDB compiling
	on Solaris again.

Fri May 19 14:49:37 1995  J.T. Conklin  <jtc@rtl.cygnus.com>

	* defs.h (ATTR_FORMAT): New macro, expands to gcc's format
	  attribute when compiled by gcc.  
	* defs.h, language.h, monitor.h: Changed many function
	  declarations to use ATTR_FORMAT.

	* breakpoint.c (delete_command); source.c (directory_command);
	  top.c (define_command): Changed call to query() that had too
	  many arguments.
	* printcmd.c (address_info): Changed call to printf_filtered()
	  that had too many arguments.

Fri May 19 09:52:07 1995  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* infrun.c (wait_for_inferior): Move assignments to stop_signal
	and stop_pc, and STOPPED_BY_WATCHPOINT code, back where they
	were--after the switch statement on w.kind.  You can't read the
	registers of an inferior which has exited.  Use a goto in the
	STOPPED_BY_WATCHPOINT code.
	* infrun.c (wait_for_inferior): Reinstate
	HAVE_STEPPABLE_WATCHPOINT and HAVE_CONTINUABLE_WATCHPOINT code.

Fri May 19 06:15:40 1995  Jim Kingdon  <kingdon@deneb.cygnus.com>

	* utils.c, complaints.c, language.c, monitor.c, remote-array.c,
	remote-mips.c, remote-os9k.c, remote-st.c: Conditionalize use of
	stdarg rather than varargs on ANSI_PROTOTYPES not __STDC__; it